--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
+sudo: false
 language: python
 python:
+  - "3.4"
   - "3.5"
-  - "3.5-dev" # 3.5 development branch
   - "3.6"
-  - "3.6-dev" # 3.6 development branch
-  - "3.7-dev" # 3.7 development branch
-  - "nightly" # currently points to 3.7-dev
-  - "pypy3" # Pypy3 2.4.0
-# command to install dependencies
-install: "pip install -r requirements.txt"
-# command to run tests
-script: pytest
+  - "3.7"
+install: pip install tox-travis
+script: tox
