--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,17 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py35
+envlist = py35, py36
 
 [testenv:py35]
 basepython = python3.5
+commands = pytest
+deps =
+    tinydb
+    pytest
+
+[testenv:py36]
+basepython = python3.6
 commands = pytest
 deps =
     tinydb
