--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py35, py36
+envlist = py35, py36, py37
 
 [testenv:py35]
 basepython = python3.5
@@ -15,6 +15,13 @@ deps =
 
 [testenv:py36]
 basepython = python3.6
+commands = pytest
+deps =
+    tinydb
+    pytest
+
+[testenv:py37]
+basepython = python3.7
 commands = pytest
 deps =
     tinydb
